# LanyouLauncher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: account.rs  launch.rs  mod.rs  mod_manager.rs  settings.rs  system.rs  update.rs  version.rs
src-tauri/src/i18n/: error.rs  mod.rs
src-tauri/src/models/: account.rs  launch.rs  mod.rs  mod_info.rs  settings.rs  version.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/auth/: microsoft.rs  mod.rs  offline.rs
src-tauri/src/services/java/: detector.rs
src-tauri/src/services/launch/: config.rs  mod.rs  process.rs
src-tauri/src/services/mod_platform/: curseforge.rs  modrinth.rs
src-tauri/src/services/update/: checker.rs
src-tauri/src/services/version/: download.rs  loader.rs  manifest.rs  meta.rs  mod.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: http.rs  mod.rs  paths.rs  url.rs
src/i18n/: index.ts  useTranslation.ts
src/pages/: Accounts.tsx  Home.tsx  ModDetail.tsx  Mods.tsx  Settings.tsx  SkinPreviewPage.tsx  VersionDetail.tsx  Versions.tsx
src/router/: index.tsx
src/services/: accountService.ts  launchService.ts  modService.ts  settingsService.ts  skinCache.ts  taskService.ts  updateService.ts  versionService.ts
src/stores/: accountStore.ts  index.ts  launchStore.ts  modStore.ts  (+4 more)
(+42 files in other folders)
